[project]
name = "needle-steering-planner"
version = "0.1.0"
description = "Path Replanning for Orientation-Constrained Needle Steering implementation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "cvxpy>=1.3.0",
    "matplotlib>=3.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/path_planner"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
path-planner-sim = "path_planner.__main__:run_main"
path_planner = "path_planner.__main__:run_main"